# python_hw2

./: .env.example  .env.local  .gitignore  README.md  debug.py  docker-compose.yml  pyproject.toml  qa_test.py  quick_test.py  requirements-dev.txt  requirements.txt  setup.py  test_e2e.py  test_fresh.py  test_original.py  test_overflow.py  test_protection.py  test_simple.py
docker/: Dockerfile
scripts/: create_admin.py  quick_test.py  setup_auth.py
scripts/debug/: QA_Test_Report.md  error_investigation.py  qa_test.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py  auth.py  factorial.py  fibonacci.py  power.py
src/domain/: __init__.py  models.py
src/infra/: __init__.py  auth.py  cache.py  db.py  logging.py  messaging.py  metrics.py
src/repositories/: __init__.py  interfaces.py  sqlite_repo.py
src/services/: __init__.py  auth.py  factorial.py  fibonacci.py  power.py
src/tests/: conftest.py
src/tests/debug/: README.md  test_150_25.py  test_fresh.py  test_large.json  test_original.py  test_power.json  test_protection.py  test_simple.py
src/tests/e2e/: test_e2e.py
src/tests/integration/: test_api.py  test_cache_messaging.py
src/tests/unit/: test_cache.py  test_domain.py  test_messaging.py  test_messaging_new.py  test_services.py
